cloud/cypht/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cypht
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  rules:
    - host: cypht.lillecarl.com
      http:
        paths:
          - backend:
              service:
                name: cypht
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - cypht.lillecarl.com
      secretName: tls
